--- a/ShareClassWebAPI/ShareClassWebAPI/appsettings.json
+++ b/ShareClassWebAPI/ShareClassWebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=ShareClassWeb;Trusted_Connection=True;Encrypt=False;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
