--- a/share-class-react/package.json
+++ b/share-class-react/package.json
@@ -2,6 +2,7 @@
   "name": "share-class-react",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://localhost:7088",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -34,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.39.0",
+    "eslint-plugin-react": "^7.32.2",
+    "react-router-dom": "^6.10.0"
   }
 }
