--- a/share-class-react/package.json
+++ b/share-class-react/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "antd": "^5.4.6",
     "eslint": "^8.39.0",
     "eslint-plugin-react": "^7.32.2",
     "react-router-dom": "^6.10.0"
